src/objects/VerifyTx__Mappings_Data__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>VerifyTx__Client_Status__c</fullName>
        <label>Client Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Facility__c</fullName>
        <label>Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Lookup_Id__c</fullName>
        <label>Lookup Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Member_Id__c</fullName>
        <label>Member Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Patient_Birth_Date__c</fullName>
        <label>Patient Birth Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Patient_First_Name__c</fullName>
        <label>Patient First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Patient_Gender__c</fullName>
        <label>Patient Gender</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Patient_Last_Name__c</fullName>
        <label>Patient Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Payer_Name__c</fullName>
        <label>Payer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Subscriber_Relationship__c</fullName>
        <label>Subscriber Relationship</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Verification_Status__c</fullName>
        <label>Verification Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VerifyTx__Verify_Once__c</fullName>
        <label>Verify Once</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Mappings Data</label>
</CustomObject>